--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.40-Alpha,</span>
+<span id="revnumber">versione 0.7.41-Alpha,</span>
 <span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -725,6 +725,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_prega">prega</a></li>
 <li><a href="#_rifai">rifai</a></li>
 <li><a href="#_scava">scava</a></li>
+<li><a href="#_scavalca">scavalca</a></li>
 <li><a href="#_segui">segui</a></li>
 <li><a href="#_suona">suona</a></li>
 <li><a href="#_trova">trova</a></li>
@@ -1926,6 +1927,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>scava</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">scava (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>scavalca</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">scavalca (ogg)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
@@ -3803,6 +3813,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>scava</code></p>
 </li>
 <li>
+<p><code>scavalca</code></p>
+</li>
+<li>
 <p><code>segui</code></p>
 </li>
 <li>
@@ -3905,6 +3918,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 
 </div>
 <div class="sect3">
+<h4 id="_scavalca"><a class="anchor" href="#_scavalca"></a>scavalca</h4>
+
+</div>
+<div class="sect3">
 <h4 id="_segui"><a class="anchor" href="#_segui"></a>segui</h4>
 
 </div>
@@ -3970,13 +3987,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>clean</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">polish, wipe</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">clean (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>climb</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">climb (obj)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
@@ -4449,6 +4459,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>scava</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>scavalca</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>segui</code>.</p>
 </li>
 <li>
@@ -4468,7 +4481,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.40-Alpha<br>
+Versione 0.7.41-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
