Verbs 'Clean', 'Rub' & Shake'
Verb restrictions:
- `rub`     to `sfregare`
- `shake`   to `agitare`
- `squeeze` to `spremere`

Verbs:
- `clean`   to `pulisci` (+ strofina, lucida)
- `rub`     to `sfrega`  (+ massaggia)
- `shake`   to `agita`   (+ scuoti)
- `squeeze` to `spremi`  (+ strizza)

With this commit all library verbs have been translated.
Bump up all library files version to 0.8.0.

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.27-Alpha,</span>
-<span id="revdate">2018-11-12</span>
+<span id="revnumber">versione 0.8.0-Alpha,</span>
+<span id="revdate">2018-11-13</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -457,7 +457,6 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
-<li><a href="#_restrizioni_verbali_da_tradurre">Restrizioni Verbali da Tradurre</a></li>
 <li><a href="#_check_list">Check List</a></li>
 </ul>
 </li>
@@ -505,6 +504,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN abbandonare_partita.      ---&gt; 'quit'
   CAN accendere.                ---&gt; turn_on
   CAN acchiappare.              ---&gt; catch
+  CAN agitare.                  ---&gt; shake
   CAN alzarsi.                  ---&gt; stand (up)
   CAN andare_a.                 ---&gt; go_to
   CAN annusare.                 ---&gt; smell
@@ -628,6 +628,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN sedersi.                  ---&gt; sit (down)
   CAN sedersi_su.               ---&gt; sit_on
   CAN seguire.                  ---&gt; follow
+  CAN sfregare.                 ---&gt; rub
   CAN sollevare.                ---&gt; lift
   CAN sorseggiare.              ---&gt; sip
   CAN sparare.                  ---&gt; fire
@@ -636,6 +637,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN spingere.                 ---&gt; push
   CAN spingere_con.             ---&gt; push_with
   CAN spogliarsi.               ---&gt; undress
+  CAN spremere.                 ---&gt; squeeze
   CAN strappare.                ---&gt; tear (+ rip)
   CAN suonare.                  ---&gt; play
   CAN svuotare.                 ---&gt; 'empty'
@@ -743,30 +745,6 @@ essere mostrato all&#8217;inizio della partita tramite il template dell&#8217;is
 italiano del modulo delle definizioni.</p>
 </div>
 <div class="sect2">
-<h3 id="_restrizioni_verbali_da_tradurre"><a class="anchor" href="#_restrizioni_verbali_da_tradurre"></a>Restrizioni Verbali da Tradurre</h3>
-<div class="paragraph">
-<p>Questo è l&#8217;elenco degli attributi verbali non ancora tradotti:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">--CAN extinguish. ----------------&gt; ** VERBO ELIMINATO **  (+ put out, quench)
---CAN get_up. --------------------&gt; ** VERBO ELIMINATO **
---CAN light. ---------------------&gt; ** VERBO ELIMINATO **
---CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
---CAN put_down. ------------------&gt; ** WASN'T USED! (SEE 'drop'!) **
-  CAN rub.
-  CAN shake.
---CAN shoot. ---------------------&gt; ** VERBO ELIMINATO **
---CAN shoot_with. ----------------&gt; ** VERBO ELIMINATO **
---CAN smell0. --------------------&gt; ** ATTRIBUTO ELIMINATO **
-  CAN squeeze.
---CAN switch. --------------------&gt; ** VERBO ELIMINATO **
---CAN switch_on. -----------------&gt; ** VERBO ELIMINATO **
---CAN switch_off. ----------------&gt; ** VERBO ELIMINATO **</code></pre>
-</div>
-</div>
-</div>
-<div class="sect2">
 <h3 id="_check_list"><a class="anchor" href="#_check_list"></a>Check List</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
@@ -777,7 +755,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.27-Alpha<br>
+Versione 0.8.0-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
