--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.41-Alpha,</span>
-<span id="revdate">2018-11-12</span>
+<span id="revnumber">versione 0.8.0-Alpha,</span>
+<span id="revdate">2018-11-13</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -704,6 +704,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_verbi_sfusi">Verbi Sfusi</a>
 <ul class="sectlevel3">
 <li><a href="#_acchiappa">acchiappa</a></li>
+<li><a href="#_agita">agita</a></li>
 <li><a href="#_aspetta">aspetta</a></li>
 <li><a href="#_attraversa">attraversa</a></li>
 <li><a href="#_bacia">bacia</a></li>
@@ -723,10 +724,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_libera">libera</a></li>
 <li><a href="#_mostra">mostra</a></li>
 <li><a href="#_prega">prega</a></li>
+<li><a href="#_pulisci">pulisci</a></li>
 <li><a href="#_rifai">rifai</a></li>
 <li><a href="#_scava">scava</a></li>
 <li><a href="#_scavalca">scavalca</a></li>
 <li><a href="#_segui">segui</a></li>
+<li><a href="#_sfrega">sfrega</a></li>
+<li><a href="#_spremi">spremi</a></li>
 <li><a href="#_suona">suona</a></li>
 <li><a href="#_trova">trova</a></li>
 <li><a href="#_vai_a">vai_a</a></li>
@@ -735,8 +739,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#_verbi_di_domande">Verbi di Domande</a></li>
-<li><a href="#_todo">TODO</a></li>
-<li><a href="#_verbi_da_tradurre">Verbi da Tradurre</a>
+<li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
 <li><a href="#_check_list_generale">Check List Generale</a></li>
 <li><a href="#_check_list_doxter">Check List Doxter</a></li>
@@ -1036,6 +1039,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>acchiappa</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">acchiappa (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>agita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">scuoti</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">agita (ogg)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
@@ -1798,6 +1810,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>pulisci</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">strofina, lucida</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">pulisci (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>racconta</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">informa, dì a, parla a</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">racconta a (png) di (argomento)!</p></td>
@@ -1996,6 +2017,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sfrega</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">massaggia</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">sfrega (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>siediti</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">siedi</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">siediti</p></td>
@@ -2101,6 +2131,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>spremi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">strizza</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">spremi (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3750,6 +3789,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>acchiappa</code></p>
 </li>
 <li>
+<p><code>agita</code></p>
+</li>
+<li>
 <p><code>aspetta</code></p>
 </li>
 <li>
@@ -3804,6 +3846,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>mostra</code></p>
 </li>
 <li>
+<p><code>pulisci</code></p>
+</li>
+<li>
 <p><code>prega</code></p>
 </li>
 <li>
@@ -3819,6 +3864,12 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>segui</code></p>
 </li>
 <li>
+<p><code>sfrega</code></p>
+</li>
+<li>
+<p><code>spremi</code></p>
+</li>
+<li>
 <p><code>suona</code></p>
 </li>
 <li>
@@ -3831,6 +3882,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_acchiappa"><a class="anchor" href="#_acchiappa"></a>acchiappa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_agita"><a class="anchor" href="#_agita"></a>agita</h4>
 
 </div>
 <div class="sect3">
@@ -3910,6 +3965,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 
 </div>
 <div class="sect3">
+<h4 id="_pulisci"><a class="anchor" href="#_pulisci"></a>pulisci</h4>
+
+</div>
+<div class="sect3">
 <h4 id="_rifai"><a class="anchor" href="#_rifai"></a>rifai</h4>
 
 </div>
@@ -3923,6 +3982,14 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_segui"><a class="anchor" href="#_segui"></a>segui</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_sfrega"><a class="anchor" href="#_sfrega"></a>sfrega</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_spremi"><a class="anchor" href="#_spremi"></a>spremi</h4>
 
 </div>
 <div class="sect3">
@@ -3959,60 +4026,6 @@ o domande poste dal protagonista stesso (p.es. &#8220;chi sono?&#8221;, &#8220;s
 <p>Questa sezione contiene l&#8217;elenco delle cose da fare per ultimare l&#8217;adattamento
 italiano del modulo dei verbi.</p>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_verbi_da_tradurre"><a class="anchor" href="#_verbi_da_tradurre"></a>Verbi da Tradurre</h2>
-<div class="sectionbody">
-<table class="tableblock frame-all grid-all stretch">
-<caption class="title">Tabella 1. Elenco dei Verbi Non Tradotti</caption>
-<colgroup>
-<col style="width: 23.5294%;">
-<col style="width: 35.2941%;">
-<col style="width: 29.4117%;">
-<col style="width: 5.8823%;">
-<col style="width: 5.8825%;">
-</colgroup>
-<thead>
-<tr>
-<th class="tableblock halign-left valign-top">VERBO</th>
-<th class="tableblock halign-left valign-top">SINONIMI</th>
-<th class="tableblock halign-left valign-top">SINTASSI</th>
-<th class="tableblock halign-center valign-top">A</th>
-<th class="tableblock halign-center valign-top">O</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>clean</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">polish, wipe</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">clean (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>rub</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">rub (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>shake</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">shake (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>squeeze</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">squeeze (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-</tbody>
-</table>
 <div class="sect2">
 <h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check List Generale</h3>
 <div class="paragraph">
@@ -4396,6 +4409,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>acchiappa</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>agita</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>aspetta</code>.</p>
 </li>
 <li>
@@ -4453,6 +4469,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>prega</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>pulisci</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>rifai</code>.</p>
 </li>
 <li>
@@ -4463,6 +4482,12 @@ italiano del modulo dei verbi.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>segui</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>sfrega</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>spremi</code>.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>suona</code>.</p>
@@ -4481,7 +4506,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.41-Alpha<br>
+Versione 0.8.0-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
